--- a/content/plugins/editions/performance.slim
+++ b/content/plugins/editions/performance.slim
@@ -1,6 +1,5 @@
 Flags: edition
 Edition: performance
-Cost: The Performance edition costs $249 per domain
 Suffix: The Elite and Creative editions include everything found in the Performance edition. 
 sort_field: 1
 Includes Editions: free
@@ -8,9 +7,10 @@ Includes Editions: free
 h1 Performance Edition
 
 markdown: 
-  This package gives you scalable performance, high-quality GIF, animated GIF, and 8-bit PNG support. 
+  This set of plugins gives you scalable performance, high-quality GIF, animated GIF, and 8-bit PNG support. 
 
-  When purchased as the Performance Edition (under the [Domain license](/licenses/domain)), you are allowed to use the plugins on one registered domain and any subdomains. 
-  If purchased with the Elite Edition or Support Contracts, you do not need to register your domains.
+  To see which plans include these plugins, visit the [licenses](/licenses) page.
+
+  
 
 == partial :my_plugins, {:locals => {display_edition: :performance, includes_editions: defined?(includes_editions) ? includes_editions : [:free]}}
