--- a/content/plugins/index.slim
+++ b/content/plugins/index.slim
@@ -14,16 +14,16 @@ h1 Plugin Index
 
 h2
   a href="/plugins/editions/performance" Performance Edition 
-  | (11 plugins) - $249/domain
+  | (11 plugins)
 == partial("/plugins/editions/performance",{locals: {includes_editions:[]}})
 
 h2
   a href="/plugins/editions/creative" Creative Edition 
-  | (11 + 13 plugins) - $499/domain
+  | (11 + 13 plugins)
 == partial("/plugins/editions/creative",{locals: {includes_editions:[]}})
 h2
   a href="/plugins/editions/elite" Elite Edition 
-  | (11 + 13 + 6 plugins) - $849/enterprise
+  | (11 + 13 + 6 plugins)
 == partial("/plugins/editions/elite",{locals: {includes_editions:[]}})
 h2
   a href="/plugins/editions/free" Essential Edition 
