remove 30 days free promo text from per-server licensing

--- a/content/licenses/server.slim
+++ b/content/licenses/server.slim
@@ -43,7 +43,7 @@ h1 Licenses
 
         .buy-buttons
           a href="https://imazen.chargebee.com/hosted_pages/plans/per-server-imageresizer-performance" class="btn btn-primary btn-buynow-green"
-            strong Get 30 days free &#8226; $70/mo/server
+            strong Sign up now &#8226; $70/mo/server
 
       div.licensebox.span6
         div style="background-color: #FC9100;"
@@ -61,7 +61,7 @@ h1 Licenses
           li Batch processing and .zip file creation
         .buy-buttons
           a href="https://imazen.chargebee.com/hosted_pages/plans/per-server:-imageresizer-elite" class="btn btn-primary btn-buynow-orange"
-            strong Get 30 days free &#8226; $100/mo/server
+            strong Sign up now &#8226; $100/mo/server
 
   div style="clear:both"
 == partial :"subscription/editions"
