Replace licenses with pricing

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -22,7 +22,7 @@ Layout: false
             li
               a href="/support" Support
             li
-              a href="/licenses" Licenses
+              a href="/pricing" Pricing
       
       .span1
         #footer-menu-back-to-top
