--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -30,7 +30,7 @@ header
               li
                 a href="/support" Support
               li
-                a href="/licenses" Licenses
+                a href="/pricing" Pricing
               
 
 
