--- a/content/pricing/editions.slim
+++ b/content/pricing/editions.slim
@@ -1,9 +1,11 @@
+Layout: false
+
 .row.lrow.out style="margin-top: -20px; padding-bottom: 30px; margin-right: 10px;"
-  h1.mainheader.lic#editions Which features?
+  h1.mainheader.lic#editions Which product features do you need?
   .row-fluid
     .span12 style="text-align:center;"
       h4
-        | Running ImageResizer already? Check /resizer.debug to see what you're using.
+        | Running ImageResizer already? Check /resizer.debug to see what you're using. The Creative Edition is included in the Elite Edition. 
   .row-fluid
     .lrow
       div.licensebox.span4
@@ -22,7 +24,7 @@
       div.licensebox.span4
         div style="background-color: #FC9100;"
           h2.licensetitlesmall Performance Edition
-          h3.licenseprice AGPLv3 or Commercial (from $70/mo)
+          h3.licenseprice AGPLv3 or Commercial
         ul.licensecontent
           strong Includes all Essential Features, plus:
           li 
@@ -39,7 +41,7 @@
       div.licensebox.span4
         div style="background-color: #0FAD07;"
           h2.licensetitlesmall Elite Edition
-          h3.licenseprice AGPLv3 or Commercial (from $100/mo)
+          h3.licenseprice AGPLv3 or Commercial
         ul.licensecontent
           strong Includes all Performance features, plus:
           li Watermark and flexible image overlay support
