--- a/content/pricing/footer.slim
+++ b/content/pricing/footer.slim
@@ -1,3 +1,4 @@
+Layout: false
 
 .container
   .row
@@ -34,8 +35,8 @@
          * [Resizer Freedom][freedom]
          * [Resizer Domain][domain]: The [Performance](/plugins/editions/performance) and [Creative](/plugins/editions/creative) editions are provided under this license.
          * [Resizer Enterprise][enterprise]: The [Elite edition](/plugins/editions/elite), OEM, and SaaS products include and Enterprise license.
-         * [Resizer OEM][oem]: You buy this for business-wide use and resale. Available for purchase [here](https://store.imazen.io/products/r4-oem-license).
-         * [Resizer SaaS][saas]: You buy this for using ImageResizer in a SaaS product. Available for purchase [here](https://store.imazen.io/products/r4-saas-license).
+         * [Resizer OEM][oem]: You buy this for business-wide use and resale.
+         * [Resizer SaaS][saas]: You buy this for using ImageResizer in a SaaS product. 
 
 
         [freedom]: /licenses/freedom  "Resizer Freedom License"
@@ -60,7 +61,7 @@
       markdown:
         ## FAQ
         Q: Are licenses perpetual?
-        : Site-wide subscription licenses become perpetual (for pre-existing versions) after 3 years. Legacy [version-specific licenses](/licenses/legacy-perpetual) were perpetual, but had to be re-purchased when new versions were released. We're adopting a more regular release cycle, and have thus retired the old model. 
+        : Enterprise-wide subscription licenses become perpetual (for pre-existing versions) after 3 years. Some subscriptions allow you to purchase perpetual licensing for a additional one-time fee.  Legacy version-specific licenses were perpetual, but had to be re-purchased when new versions were released. We're adopting a more regular release cycle, and have thus retired the old model. 
 
         Q: Can I buy plugins individually?
         : No.
