--- a/content/pricing/per-server.slim
+++ b/content/pricing/per-server.slim
@@ -3,7 +3,7 @@ Icon: notes
 Libs: -comments, uservoice, license
 Flags: unwrap
 Layout: layout
-
+Aliases: /licenses/server
 
 h1 Licenses
 
@@ -19,7 +19,7 @@ h1 Licenses
       h2
         | 1 server = 4 cores (logical processors). One shared license key.
       h2
-        | No limits on business size, instances or domains. These are floating, concurrent use licenses. Billed monthly. No contracts. Adjust the quantity from your portal. 
+        | No limits on business size, instances or domains. These are floating, concurrent use licenses. Billed monthly. No contracts. Adjust the quantity from your portal. Contact sales@imazen.io to add to your enterprise-wide license. 
 
 
   .row-fluid
@@ -27,7 +27,7 @@ h1 Licenses
       div.licensebox.span6
         div style="background-color: #0FAD07;"
           h2.licensetitle Performance
-          h3.licenseprice $70/mo
+          h3.licenseprice $70/mo/server
         ul.licensecontent
           strong Includes all Essential Features, plus:
 
@@ -39,16 +39,12 @@ h1 Licenses
           li SQL, Azure, and Amazon S3 support
           li 8-bit PNG/GIF & animated GIF processing
           li Secure remote image processing
-          
-
-        .buy-buttons
-          a href="https://imazen.chargebee.com/hosted_pages/plans/per-server-imageresizer-performance" class="btn btn-primary btn-buynow-green"
-            strong Get 30 days free &#8226; $70/mo/server
+        
 
       div.licensebox.span6
         div style="background-color: #FC9100;"
           h2.licensetitle Elite
-          h3.licenseprice $100/mo
+          h3.licenseprice $100/mo/server
         ul.licensecontent
           strong Includes all Performance features, plus:
           li Flexible image and watermark overlay support
@@ -59,10 +55,7 @@ h1 Licenses
           li Automatic and manual red-eye detection and correction
           li Face detection and smart cropping
           li Batch processing and .zip file creation
-        .buy-buttons
-          a href="https://imazen.chargebee.com/hosted_pages/plans/per-server:-imageresizer-elite" class="btn btn-primary btn-buynow-orange"
-            strong Get 30 days free &#8226; $100/mo/server
 
   div style="clear:both"
-== partial :"subscription/editions"
-== partial :"subscription/footer"
+== partial :"editions"
+== partial :"footer"
