--- a/content/pricing/index.slim
+++ b/content/pricing/index.slim
@@ -25,8 +25,9 @@ ul.org_sizes
       a href="/pricing/for/#{org[:tag]}"
         i class="icon-white #{org[:icon]}"
         = org[:summary]
-p
-  | Note: Employee count shall include independent contractors that have been with your organization for more than 3 months and average more than 20 hours per week. 
-p
-  | If your non-profit employs fewer than 30 people, be sure to compare microenterprise and small-business pricing. These may be lower than non-profit pricing.
+
+markdown:
+  1. Include your umbrella corporation head count; licenses cover your parent corportion and its subsidiaries.
+  2. Include regular independent contractors (those that have been with your organization for more than 3 months and average more than 20 hours per week). 
+  3. If your non-profit employs fewer than 5 people, try microenterprise pricing instead.
 == partial :"footer"
