Remove promo, introduce perpetual add-on pricing

--- a/content/pricing/footer.slim
+++ b/content/pricing/footer.slim
@@ -61,10 +61,13 @@ Layout: false
       markdown:
         ## FAQ
         Q: Are licenses perpetual?
-        : Enterprise-wide subscription licenses become perpetual (for pre-existing versions) after 3 years. Some subscriptions allow you to purchase perpetual licensing for a additional one-time fee.  Legacy version-specific licenses were perpetual, but had to be re-purchased when new versions were released. We're adopting a more regular release cycle, and have thus retired the old model. 
+        : Enterprise-wide subscription licenses become perpetual (for pre-existing versions) after 3 years. Some yearly subscriptions also allow you to purchase a perpetual upgrade for a one-time fee from your customer portal (or up-front).
 
         Q: Can I buy plugins individually?
-        : No.
+        : No, and we do not make exceptions to this rule. 
+
+        Q: Can I pay by check? 
+        : No, but customers in the USA can pay by bank debit (ACH). Sign up for a 30-day trial, then email sales@imazen.io and ask for us to enable ACH on your account. You'll then be able to [login to account.imazen.io](https://account.imazen.io) and securely enter your bank information and verify it with microtransactions. Once it's verified, you can switch to any subscription and pay by bank instead of credit card. This is all handled by Chargebee, our recurring billing partner.
 
         Q: Can I upgrade from one license to another? 
         : You can switch between subscriptions in your customer portal. 
