--- a/content/pricing/for.slim
+++ b/content/pricing/for.slim
@@ -13,6 +13,9 @@ css:
   .buy-buttons{
     margin-top: 5px;
   }
+  .perpetual{
+    display: none;
+  }
 - if request[:org]
   .row.lrow.out style="padding-bottom: 50px; margin-right: 10px;"
     h1.mainheader
@@ -37,7 +40,10 @@ css:
           |  included. Extras are #{request[:org][:products][:addon_server_performance][:price_summary]} (Performance) or #{request[:org][:products][:addon_server_elite][:price_summary]} (Elite).
         h4
           strong
-            | Free perpetual license (for existing releases) if you sign up for a yearly plan before July 31st 2017 (Save #{request[:org][:products][:addon_elite_perpetual][:price_summary]}).
+            | Perpetual license (for existing releases) free after 3 years or 
+            a href="#perpetual" onclick="$('.perpetual').fadeIn(1200);"
+              | with one-time fee
+            | . 
         h4 
           a href="https://account.imazen.io"
             | Sign in
@@ -72,10 +78,18 @@ css:
             a.btn.btn-primary.btn-buynow-purple href=request[:org][:products][:elite_basic][:monthly][:link]
               == request[:org][:products][:elite_basic][:monthly][:button]
           .buy-buttons
+            | &mdash; or &mdash;
+          .buy-buttons
             a href=request[:org][:products][:elite_basic][:yearly][:link]
               em
                 == request[:org][:products][:elite_basic][:yearly][:button]
-         
+          .perpetual
+            .buy-buttons
+              | &mdash; or buy perpetual rights up-front &mdash;
+            .buy-buttons
+              a href=request[:org][:products][:elite_basic_perpetual][:yearly][:link]
+                em
+                  == request[:org][:products][:elite_basic_perpetual][:yearly][:button]
         div.licensebox.span4
           div style="background-color: #0FAD07;"
             h2.licensetitle Elite Edition Enterprise-wide
@@ -100,10 +114,18 @@ css:
               strong
                 == request[:org][:products][:elite][:monthly][:button]
           .buy-buttons
+            | &mdash; or &mdash;
+          .buy-buttons
             a href=request[:org][:products][:elite][:yearly][:link]
               em
                 == request[:org][:products][:elite][:yearly][:button]
-         
+          .perpetual
+            .buy-buttons
+              | &mdash; or buy perpetual rights up-front &mdash;
+            .buy-buttons
+              a href=request[:org][:products][:elite_perpetual][:yearly][:link]
+                em
+                  == request[:org][:products][:elite_perpetual][:yearly][:button]
         div.licensebox.span4
           div style="background-color: #FC9100;"
             h2.licensetitle Performance Edition Enterprise
@@ -124,13 +146,15 @@ css:
               span
                 == request[:org][:products][:performance][:monthly][:button]
           .buy-buttons
+            | &mdash; or &mdash;
+          .buy-buttons
             a href=request[:org][:products][:performance][:yearly][:link]
               em
                 == request[:org][:products][:performance][:yearly][:button]
-          / 
+          .perpetual
             .buy-buttons
-              p
-                | Get a perpetual license immediately:
+              | &mdash; or buy perpetual rights up-front &mdash;
+            .buy-buttons
               a href=request[:org][:products][:performance_perpetual][:yearly][:link]
                 em
                   == request[:org][:products][:performance_perpetual][:yearly][:button]
@@ -142,10 +166,10 @@ css:
           a href="https://account.imazen.io"
             | account.imazen.io. 
           | Use coupon #{request[:org][:coupon]}
+        h4
+          | All plans are recurring and will charge your card at the specified interval until canceled. If you have perpetual usage rights, you can continue using ImageResizer versions released before your cancellation date.
         h2 
-          | Need help? Email sales@imazen.io or  
-          a href="https://lc.chat/now/8717566/"
-            | chat with us. 
+          | Need help? Email sales@imazen.io 
 
     div style="clear:both"
   == partial :"editions"
@@ -167,7 +191,7 @@ css:
             | ★ Restricted to the licensee, subsidiaries, and sublicensees | ✓ Unrestricted | ✓ Unrestricted | ★ Restricted to the licensee, subsidiaries, and sublicensees |
             | ✓ Perpetual license add-on available (free after 3 years) | ✓ Perpetual license add-on available | ✗ No perpetual licensing | ★ Not perpetual, but lighter enforcement model |
             | ★ Best value; start here | ★ Cheapest, but very limited | Flat [per-server rate](/pricing/per-server) | ★ Great for redistribution |
-            | [Performance: #{request[:org][:products][:performance][:yearly][:link]}](#{request[:org][:products][:performance][:price_summary]}) <br /> [Elite: #{request[:org][:products][:elite][:yearly][:link]}](#{request[:org][:products][:elite][:yearly][:price_summary]}) | [Performance: #{request[:org][:products][:project_performance][:yearly][:link]}](#{request[:org][:products][:project_performance][:price_summary]}) | Performance: #{request[:org][:products][:addon_server_performance][:price_summary]} per 4 core server <br /> Elite: #{request[:org][:products][:addon_server_elite][:price_summary]} per 4 core server. <br /> Contact sales@imazen.io to purchase. | #{request[:org][:products][:addon_oem][:price_summary]} <br /> Contact sales@imazen.io to purchase.|
+            | [Performance: #{request[:org][:products][:performance][:yearly][:link]}](#{request[:org][:products][:performance][:price_summary]}) <br /> [Elite: #{request[:org][:products][:elite][:yearly][:link]}](#{request[:org][:products][:elite][:yearly][:price_summary]}) | [Performance: #{request[:org][:products][:project_performance][:yearly][:link]}](#{request[:org][:products][:project_performance][:price_summary]}) <br /> Performance with perpetual license: [#{request[:org][:products][:project_performance_perpetual][:yearly][:link]}](#{request[:org][:products][:project_performance_perpetual][:yearly][:button]}) | Performance: #{request[:org][:products][:addon_server_performance][:price_summary]} per 4 core server <br /> Elite: #{request[:org][:products][:addon_server_elite][:price_summary]} per 4 core server. <br /> Contact sales@imazen.io to purchase. | #{request[:org][:products][:addon_oem][:price_summary]} <br /> Contact sales@imazen.io to purchase.|
 
 
     div style="clear:both"
