Add Imageflow promotion

--- a/content/index.slim
+++ b/content/index.slim
@@ -13,8 +13,8 @@ h1 ASP.NET library and image server
       .row-fluid
         .span12 style="text-align:center;"
           h2 style="color:white"
-            a href="https://www.imageflow.io/imageresizer" style="color:white"
-              | Imageflow is the technology behind ImageResizer vNext.
+            a href="/pricing" style="color:white"
+              | Get Imageflow for free with a new ImageResizer subcription. Offer expires Sept 25th. 
           
   .container
     .row-fluid
