--- a/content/pricing/for.slim
+++ b/content/pricing/for.slim
@@ -31,6 +31,8 @@ css:
           
         h2
           | Unlimited servers, instances, and domains. One license key for your entire organization.
+        h2 style="color:#0FAD07;"
+          | Sign up by September 25th and get Imageflow for free! Requires any Enterprise-wide plan.
         h4
           | Redistribution with custom software is free. Add #{request[:org][:products][:addon_oem][:price_summary]} to distribute with a product (contact us). 
         h4 
