--- a/content/benefits/comprehensive.slim
+++ b/content/benefits/comprehensive.slim
@@ -9,11 +9,11 @@ p Get the best out of your images with minimal effort. Our adjustments are desig
 p All commands are non-destructive, giving you free reign to experiment endlessly and revert easily by removing your commands. Unlike other web-based editors, all commands are processed in a single stage, eliminating quality loss from repeated compression.
 
 h2 Transform
-- def widths(*cols); cols.map{|w| (w / cols.inject(:+).to_f * (269 - 10 * (cols.count - 1))).round  } end;
-- def normal_width(count);  ((269 - 10 * (count - 1)) / count.to_f).round end;
+
+ 
 .row
   .span4
-    - w = widths(1.5,1,1,1).map{ |v| v + 4}
+    - w = benefits_widths(1.5,1,1,1).map{ |v| v + 4}
     h4 Scale with any fit mode
     img src="https://z.zr.io/ri/2s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -24,7 +24,7 @@ h2 Transform
     img src="https://z.zr.io/ri/2s.jpg?width=#{w[3]}&height=#{w[3]}&mode=crop"
     p Constrain, carve, pad, or crop to the perfect size with complete alignment control.
   .span4
-    - w = widths(1,1,1)
+    - w = benefits_widths(1,1,1)
     h4 Rotate & Flip
     img src="https://z.zr.io/ri/3s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -33,7 +33,7 @@ h2 Transform
     img src="https://z.zr.io/ri/3s.jpg?width=#{(w[2] * 0.6).round}&rotate=30&flip=h"
     p Flip, rotate, or auto-rotate
   .span4
-    - w = widths(1,1,1)
+    - w = benefits_widths(1,1,1)
     h4 Modify canvas
     img src="https://z.zr.io/ri/4s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -46,7 +46,7 @@ h2 Transform
       | No more box-model nightmares.
 .row
   .span4
-    - w = widths(1,1)
+    - w = benefits_widths(1,1)
     h4 Manual crop
     img src="https://z.zr.io/ri/1s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -54,7 +54,7 @@ h2 Transform
     p Crop by percent, pixels, or resolution-independent units (works seamlessly with jCrop).
 
   .span4
-    - w = widths(1.5,1,1)
+    - w = benefits_widths(1.5,1,1)
     h4 Auto-remove whitespace
     img src="https://z.zr.io/ri/18s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -65,7 +65,7 @@ h2 Transform
     p Product photos are painless with energy-based whitespace removal. 
 
   .span4
-    - w = widths(1.3,1,1)
+    - w = benefits_widths(1.3,1,1)
     h4 Face detection & auto-crop
     img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -82,7 +82,7 @@ h2 Enhance
       - ["","&a.balancewhite=true"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{benefits_normal_width(2)}#{q}"
       br
   .span4
     h4 Auto Histogram Equalization
@@ -90,7 +90,7 @@ h2 Enhance
       - ["", "&a.equalize=true"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{benefits_normal_width(2)}#{q}"
       br
   .span4
     h4 +50% contrast
@@ -98,7 +98,7 @@ h2 Enhance
       - ["", "&s.contrast=0.5"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{benefits_normal_width(2)}#{q}"
       br
 .row
   .span4
@@ -107,7 +107,7 @@ h2 Enhance
       - ["","&a.sharpen=20&quality=100"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{benefits_normal_width(2)}#{q}"
       br
   .span4
     h4 +50% saturation
@@ -115,7 +115,7 @@ h2 Enhance
       - ["", "&s.saturation=0.5"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{benefits_normal_width(2)}#{q}"
       br
   .span4
     h4 +15% exposure
@@ -123,7 +123,7 @@ h2 Enhance
       - ["", "&s.brightness=0.15"].each_with_index do |q,ix|
         - if ix > 0
           i.icon-arrow-right
-        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{normal_width(2)}#{q}"
+        img src="https://z.zr.io/ri/fix/#{n}s.jpg?width=#{benefits_normal_width(2)}#{q}"
       br
 
 hr
@@ -132,7 +132,7 @@ hr
   
 h2 Filter
 .row
-  - w = widths(1,1,1)
+  - w = benefits_widths(1,1,1)
   .span4
     h4 Grayscale fixes everything
     img src="https://z.zr.io/ri/utah2.jpg?width=#{w[0]}"
@@ -187,7 +187,7 @@ h2 Filter
     img src="https://z.zr.io/ri/5s.jpg?width=#{w[2]}&a.blur=15"
 .row
   .span4
-    - w = widths(1,1,1,1,0.5)
+    - w = benefits_widths(1,1,1,1,0.5)
     h4 Round corners
     img src="https://z.zr.io/ri/14s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -199,7 +199,7 @@ h2 Filter
     i.icon-arrow-right
     img src="https://z.zr.io/ri/14s.jpg?width=#{w[4]}&height=#{w[4]}&mode=crop&s.roundcorners=100"
   .span4
-    - w = widths(1,1,1,1)
+    - w = benefits_widths(1,1,1,1)
     h4 Feather edges
     img src="https://z.zr.io/ri/12s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -209,7 +209,7 @@ h2 Filter
     i.icon-arrow-right
     img src="https://z.zr.io/ri/12s.jpg?width=#{w[3]}&a.featheredges=200&bgcolor=white" 
   .span4
-    - w = widths(1,1,1)
+    - w = benefits_widths(1,1,1)
     h4 Make JPEGs transparent
     img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}"
     i.icon-arrow-right
@@ -220,13 +220,13 @@ hr
 h2 Advanced
 .row
   .span4
-    - w = widths(1,1)
+    - w = benefits_widths(1,1)
     h4 Face & Eye detection
     img src="https://z.zr.io/ri/2s.jpg?width=#{w[0]}&f.show=true"
     span.imagespacer
     img src="https://z.zr.io/ri/5s.jpg?width=#{w[1]}&r.autoeyes=true"
   .span4
-    - w = widths(1)
+    - w = benefits_widths(1)
     h4 Red-eye repair
     img src="https://z.zr.io/ri/5s.jpg?width=#{w[0]}&r.autoeyes=true"
     p Our adaptive circle fill algorithm repairs red-eye while maintaining integrity.
@@ -242,7 +242,7 @@ h2 Advanced
 .row
 
   .span4
-    - w = widths(1,1,1,1)
+    - w = benefits_widths(1,1,1,1)
     h4 Apply overlays and backgrounds
     img src="https://z.zr.io/ri/23s.jpg?width=#{w[0]}&watermark=logo"
     span.imagespacer
@@ -253,7 +253,7 @@ h2 Advanced
     img src="https://z.zr.io/ri/23s.jpg?width=#{w[3]}&watermark=fill-text1&s.alpha=.5&text=We have flexible layout"
     p Overlay (or underlay) an unlimited number of text and image layers; exercise complete layout control.
   .span4
-    - w = widths(0.5,1,1)
+    - w = benefits_widths(0.5,1,1)
     h4 Upscale on your terms
     img src="https://z.zr.io/ri/15tiny.jpg?width=#{w[0]}&height=#{w[0]}"
     i.icon-arrow-right
