--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -48,7 +48,7 @@ Layout: false
           li: a href="https://github.com/imazen/resizer" github.com/imazen/resizer
           li: a href="https://github.com/imazen/imageflow" github.com/imazen/imageflow
           li: a href="https://github.com/imazen" github.com/imazen
-          li: a href="https://github.com/nathanaeljones" github.com/nathanaeljones
+          li: a href="https://github.com/lilith" github.com/lilith
 
 
         h3 You're our sales team
@@ -85,4 +85,4 @@ Layout: false
   .container
     .span12
       p
-        | Copyright &copy; 2017 <a href="http://imazen.io">Imazen</a> and <a href="http://nathanaeljones.com">Nathanael Jones</a>
+        | Copyright &copy; 2019 <a href="http://imazen.io">Imazen</a>
