--- a/content/part_testimonials.slim
+++ b/content/part_testimonials.slim
@@ -5,7 +5,7 @@ Layout: false
   ul.quotations
     li
       blockquote
-        | ... Just to be clear to the listener, I reached out to Nathanael, and I'm talking about his product because I think it's amazing and awesome, and I've talked about it  before on the blog. He's not an advertiser, this is me, Scott, saying that this is a rocking awesome library. -
+        | ... Just to be clear to the listener, I reached out to [Lilith], and I'm talking about his product because I think it's amazing and awesome, and I've talked about it  before on the blog. [She]'s not an advertiser, this is me, Scott, saying that this is a rocking awesome library. -
         a href="http://www.hanselminutes.com/313/deep-inside-image-resizing-and-scaling-with-aspnet-and-iis-with-imageresizingnet-author-na" Hanselminutes #313
         cite
           a href="http://hanselman.com"
@@ -21,8 +21,8 @@ Layout: false
           span Web Development Manager
     li
       blockquote
-        p We've used Nathanael's Image Resizer on a variety of projects, both small and large. It's fast, reliable, robust, easy to use, and a HUGE time saver. I can easily say that we've gotten more bang-for-the-buck from it than anything else we've purchased in the past 5 years.
-        p Thanks Nathanael for creating such a wonderful product.
+        p We've used [Lilith]'s Image Resizer on a variety of projects, both small and large. It's fast, reliable, robust, easy to use, and a HUGE time saver. I can easily say that we've gotten more bang-for-the-buck from it than anything else we've purchased in the past 5 years.
+        p Thanks [Lilith] for creating such a wonderful product.
         cite
           | Dorian Collier, 
           span Deesea
