--- a/content/staff.slim
+++ b/content/staff.slim
@@ -7,9 +7,9 @@ h1 Meet the Staff
 
 .row
   .title
-    h2 Nathanael Jones
+    h2 Lilith River
   .span8
     markdown:
-      Nathanael Jones is a software engineer, father, consultant, and computer linguist with unreasonably high expectations of inanimate objects. He refines Rust, .NET, Ruby, and Javascript libraries full-time at Imazen, but can often be found on stack overflow or participating in W3C community groups.
+      Lilith River is a software engineer with unreasonably high expectations of inanimate objects. She refines Rust, .NET, Ruby, and Javascript libraries full-time at Imazen, but can often be found on stack overflow or participating in W3C community groups.
   .span4
     img src="https://z.zr.io/ri/ndj1.jpg?width=200"
