Fix nuget downloads link

--- a/content/index.slim
+++ b/content/index.slim
@@ -228,7 +228,7 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
   .container 
     .row-fluid
       .span3
-        a.block.statsbar href="http://www.nuget.org/profiles/nathanaeljones/"
+        a.block.statsbar href="https://www.nuget.org/profiles/imazen/"
           p
             i.icon-white.icon-cloud-download.statsnumber
              |  1,680,000
